# Fusion-Radiation

./: .gitignore  CMakeLists.txt  README.md  nodelets.xml  package.xml
cfg/: fusion_radiation.cfg
config/: default.yaml
data copy/: estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:52:05.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:52:36.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:53:38.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:54:09.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:54:41.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:55:12.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:55:43.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:56:14.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:56:45.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:57:16.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:57:47.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:58:19.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:58:50.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:59:21.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_09:59:52.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:00:54.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:02:28.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:02:59.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:03:30.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:04:01.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:04:32.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:05:03.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:05:35.csv  estim_1_cirle_same_pos_2023-03-28-16-53-34_model_AverageModel__2023:03:31_10:06:06.csv  (+19 more)
(+466 files in other folders)
